crux-mir/test/symb_eval/sym_bytes/deserialize.good
test deserialize/2a8b0d13::crux_test[0]: returned Symbolic BV, FAILED

failures:

---- deserialize/2a8b0d13::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/sym_bytes/deserialize.rs:19:21: 19:44: error: in deserialize/2a8b0d13::deserialize[0]
[Crux]   attempt to compute `move _61 + move _62`, which would overflow

[Crux] Overall status: Invalid.
